--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -30,6 +30,7 @@ jobs:
         uses: wileyj/actions/rustfmt@chore/6107
         with:
           alias: "fmt-stacks"
+          rust-toolchain: "nightly"
 
   # check-cache:
   #   name: Check Cache
