--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -28,7 +28,8 @@ jobs:
       - name: Rust Toolchain
         id: rustfmt
         uses: wileyj/actions/rust-toolchain@chore/6107
-        # with:
+        with:
+          rust-toolchain: nightly
         #   component: "rustfmt"
 
       # - name: Rustfmt
